# RPGEngine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  TODO.md  _action_handler_8cpp_source.html  _action_handler_8hpp_source.html  _area_8cpp_source.html  _area_8hpp_source.html  _base_exception_8hpp.html  _base_exception_8hpp.js  _base_exception_8hpp_source.html  _base_g_u_i_object_8cpp_source.html  _base_g_u_i_object_8hpp_source.html  _base_object_8cpp_source.html  _base_object_8hpp.html  _base_object_8hpp.js  _base_object_8hpp_source.html  _character_8cpp_source.html  _character_8hpp_source.html  _character_g_u_i_8cpp_source.html  _character_g_u_i_8hpp_source.html  _config_8cpp_source.html  _config_8hpp_source.html  _config_files_8hpp_source.html  _console_window_8cpp_source.html  _console_window_8hpp_source.html  _context_8cpp_source.html  _context_8hpp_source.html  _counter_8hpp_source.html  _database_8cpp_source.html  _database_8hpp_source.html  _dialogue_8cpp_source.html  _dialogue_8hpp_source.html  _engine_2main_8cpp_source.html  _event_8cpp_source.html  _event_8hpp_source.html  _event_loop_8cpp_source.html  (+462 more)
src/: CMakeLists.txt  main.cpp
src/BaseObject/: BaseDatabaseObject.hpp  BaseObject.cpp  BaseObject.hpp  CMakeLists.txt  sonar-project.properties
src/BaseObject/GUI/: BaseGUIObject.cpp  BaseGUIObject.hpp  CMakeLists.txt
src/BaseObject/unit_tests/: BaseObjectTest.cpp  BaseObjectTest.hpp  CMakeLists.txt
src/Character/: CMakeLists.txt  Character.cpp  Character.hpp  NPC.cpp  NPC.hpp  Vendor.cpp  Vendor.hpp  sonar-project.properties
src/Character/GUI/: CMakeLists.txt  CharacterGUI.cpp  CharacterGUI.hpp  NPCGUI.cpp  NPCGUI.hpp
src/Character/unit_tests/: CMakeLists.txt  CharacterTest.cpp  CharacterTest.hpp  VendorTest.cpp  VendorTest.hpp
src/Config/: CMakeLists.txt  Config.cpp  Config.hpp  ConfigFiles.hpp  Context.cpp  Context.hpp  VerbosityLevels.hpp  sonar-project.properties
src/Config/unit_tests/: CMakeLists.txt  ConfigTest.cpp  ConfigTest.hpp  ContextTest.cpp  ContextTest.hpp
src/Database/: CMakeLists.txt  Database.cpp  Database.hpp  Model.hpp  Query.cpp  Query.hpp  sonar-project.properties
src/Database/unit_tests/: CMakeLists.txt  DatabaseTest.cpp  DatabaseTest.hpp  QueryTest.cpp  QueryTest.hpp
src/Engine/: CMakeLists.txt  main.cpp  sonar-project.properties
src/Engine/GUI/: CMakeLists.txt
src/Engine/config/: global.ini
src/Engine/game1/: game1.db  main.ini
src/EngineGUI/: CMakeLists.txt  EngineGUI.cpp  EngineGUI.hpp
src/EngineGUI/unit_tests/: CMakeLists.txt  EngineGUITest.cpp  EngineGUITest.hpp
src/Events/: ActionHandler.cpp  ActionHandler.hpp  CMakeLists.txt  Event.cpp  Event.hpp  EventLoop.cpp  EventLoop.hpp  KeyBinding.cpp  KeyBinding.hpp  Work.cpp  Work.hpp  WorkerThread.cpp  WorkerThread.hpp  sonar-project.properties
src/Events/unit_tests/: ActionTest.cpp  ActionTest.hpp  CMakeLists.txt  EventLoopTest.cpp  EventLoopTest.hpp  EventTest.cpp  EventTest.hpp  WorkTest.cpp  WorkTest.hpp  WorkerThreadTest.cpp  WorkerThreadTest.hpp
src/Game/: CMakeLists.txt  Game.cpp  Game.hpp  GameLauncher.cpp  GameLauncher.hpp  GameLoader.cpp  GameLoader.hpp  sonar-project.properties
src/Game/GUI/: CMakeLists.txt  CharacterWindow.cpp  CharacterWindow.hpp  GameGUI.cpp  GameGUI.hpp  InventoryWindow.cpp  InventoryWindow.hpp
src/Game/unit_tests/: CMakeLists.txt  GameLauncherTest.cpp  GameLauncherTest.hpp  GameLoaderTest.cpp  GameLoaderTest.hpp  GameTest.cpp  GameTest.hpp
src/Maker/: CMakeLists.txt  Maker.cpp  Maker.hpp  main.cpp  sonar-project.properties
src/Maker/GUI/: CMakeLists.txt  CharacterWindow.cpp  CharacterWindow.hpp  ConsoleWindow.cpp  ConsoleWindow.hpp  DialogueLineEditWindow.cpp  DialogueLineEditWindow.hpp  DialogueWindow.cpp  DialogueWindow.hpp  MakerGUI.cpp  MakerGUI.hpp  MapWindow.cpp  MapWindow.hpp  MoneyWindow.cpp  MoneyWindow.hpp
src/Maker/unit_tests/: CMakeLists.txt  MakerTest.cpp  MakerTest.hpp
src/MakerGUI/: CMakeLists.txt  MakerGUI.cpp  MakerGUI.hpp
src/MakerGUI/unit_tests/: CMakeLists.txt  MakerGUITest.cpp  MakerGUITest.hpp
src/Map/: Area.cpp  Area.hpp  CMakeLists.txt  Map.cpp  Map.hpp  Position.cpp  Position.hpp  Vector.cpp  Vector.hpp  sonar-project.properties
src/Map/GUI/: CMakeLists.txt  MapGUI.cpp  MapGUI.hpp
src/Map/unit_tests/: AreaTest.cpp  AreaTest.hpp  CMakeLists.txt  MapTest.cpp  MapTest.hpp  PositionTest.cpp  PositionTest.hpp  VectorTest.cpp  VectorTest.hpp
src/Object/: CMakeLists.txt  Inventory.cpp  Inventory.hpp  Money.cpp  Money.hpp  Object.cpp  Object.hpp  sonar-project.properties
src/Object/GUI/: CMakeLists.txt
src/Object/unit_tests/: CMakeLists.txt  InventoryTest.cpp  InventoryTest.hpp  MoneyTest.cpp  MoneyTest.hpp  ObjectTest.cpp  ObjectTest.hpp
src/Quest/: CMakeLists.txt  Dialogue.cpp  Dialogue.hpp  DialogueAction.hpp  DialogueLine.cpp  DialogueLine.hpp  Quest.cpp  Quest.hpp  QuestJournal.cpp  QuestJournal.hpp  sonar-project.properties
src/Quest/GUI/: CMakeLists.txt  DialogueGUI.cpp  DialogueGUI.hpp
src/Quest/unit_tests/: CMakeLists.txt  DialogueActionTest.cpp  DialogueActionTest.hpp  DialogueLineTest.cpp  DialogueLineTest.hpp  DialogueTest.cpp  DialogueTest.hpp  QuestJournalTest.cpp  QuestJournalTest.hpp  QuestTest.cpp  QuestTest.hpp
src/Scripting/: CMakeLists.txt  LuaLoader.cpp  LuaLoader.hpp  LuaManager.cpp  LuaManager.hpp
src/Scripting/unit_tests/: CMakeLists.txt  LuaLoaderTest.cpp  LuaLoaderTest.hpp  ScriptingTest.cpp
src/Tools/: BaseException.hpp  CMakeLists.txt  Counter.hpp  InstrumentationTimer.cpp  InstrumentationTimer.hpp  Instrumentor.cpp  Instrumentor.hpp  Logger.cpp  Logger.hpp  PerformanceTimer.cpp  PerformanceTimer.hpp  StateMachine.hpp  Stringlist.cpp  Stringlist.hpp  Tools.cpp  Tools.hpp  sonar-project.properties
src/Tools/GUI/: CMakeLists.txt  FileBrowser.cpp  FileBrowser.hpp  Popups.cpp  Popups.hpp  Window.cpp  Window.hpp  WindowsManager.cpp  WindowsManager.hpp
src/epstl/: CMakeLists.txt  _types.hpp  container.hpp  exception.hpp  geometry_tools.hpp  map.hpp  math.hpp  pair.hpp  quadtree.hpp  quadtree_region.hpp  vector.hpp
(+170 files in other folders)
