list(APPEND MODULES Maker)
list(APPEND MODULES Engine)
list(APPEND MODULES Game)
list(APPEND MODULES Config)
list(APPEND MODULES BaseObject)
list(APPEND MODULES Object)
list(APPEND MODULES Database)
list(APPEND MODULES Character)
list(APPEND MODULES Map)
list(APPEND MODULES Tools)
list(APPEND MODULES Events)
list(APPEND MODULES Quest)
list(APPEND MODULES epstl)

foreach(module ${MODULES})
	add_subdirectory(${module})
	message("Adding " ${module} " to the configuration")
endforeach()
